# facenet-pytorch

./: .coveragerc  .gitignore  .gitmodules  README.md  README_cn.md  makefile  pyproject.toml  pytest.ini  test.sh
.github/workflows/: python.yml
src/facenet/models/: inception_resnet_v1.py  inception_resnet_v2.py
src/facenet/models/utils/: training.py
src/models/: inception_resnet_v1.py  inception_resnet_v2.py  mtcnn.py
src/models/utils/: detect_face.py  download.py  training.py
tests/: fixture.py  test_inception_resnet_v1.py  test_inception_resnet_v2.py  test_mtcnn.py  test_training.py
