[tool.poetry]
name = "facenet-pytorch"
version = "0.1.0"
description = ""
authors = ["John Doe <john@doe>"]
readme = "README.md"
packages = [{include = "*", from="src"}]


[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"


[tool.poetry.group.dev.dependencies]
torch = "^2.5.1"
pillow = "^11.1.0"
opencv-python = "^4.11.0.86"
scipy = "^1.15.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"
tensorboard = "^2.18.0"
jupyter = "^1.1.1"
requests = "^2.32.3"
numpy = "^2.2.2"
coverage = "^7.6.10"
pytest = "^8.3.4"
torchvision = "^0.20.1"
flake8 = "^7.1.1"
flake8-bugbear = "^24.12.12"
black = "^25.1.0"
flake8-pyproject = "^1.2.3"
pytest-flake8 = "^1.3.0"
flake8-pytest-style = "^2.1.0"
ruff = "^0.9.3"
mypy = "^1.15.0"
no-implicit-optional = "^1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dependencies",
    "data"
]
# Same as Black.
line-length = 80
indent-width = 4
target-version = "py312"
[tool.ruff.lint]

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore=["W191","E111","E114","E117","D206","D300","Q000","Q001","Q002","Q003","COM812","COM819","ISC002","E101"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811","F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 10

[tool.mypy]
exclude=["dependencies"]
follow_untyped_imports = true



[tool.black]

line-length = 78
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = 'data|dependencies'