[tool.poetry]
name = "facenet-pytorch"
version = "0.1.0"
description = ""
authors = ["John Doe <john@doe>"]
readme = "README.md"
packages = [{include = "src"}]


[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.67.1"
torch = {version = "^2.6.0", source="pytorch"}
torchvision = {version="^0.21.0",source="pytorch"}
torchaudio = {version = "^2.6.0",source="pytorch"}


[tool.poetry.group.dev.dependencies]
pillow = "^11.1.0"
opencv-python = "^4.11.0.86"
scipy = "^1.15.1"
tqdm = "^4.67.1"
pandas = "^2.2.3"
tensorboard = "^2.18.0"
jupyter = "^1.1.1"
requests = "^2.32.3"
numpy = "^2.2.2"
coverage = "^7.6.10"
pytest = "^8.3.4"
black = "^25.1.0"
ruff = "^0.9.3"
mypy = "^1.15.0"
torch = {source="pytorch"}
torchvision = {source="pytorch"}
torchaudio = {source="pytorch"}


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
    ".git",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "dependencies",
    "data"
]
# Same as Black.
line-length = 80
indent-width = 4
target-version = "py312"
[tool.ruff.lint]

select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore=["W191","E111","E114","E117","D206","D300","Q000","Q001","Q002","Q003","COM812","COM819","ISC002","E101"]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811","F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true
docstring-code-line-length = 10

[tool.mypy]
exclude=["dependencies"]
follow_untyped_imports = true



[tool.black]

line-length = 78
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = 'data|dependencies'
